# rtl-agent

./: .gitignore  README.md  pyproject.toml  rtl-agent.example.toml
examples/contracts/: address_map.csv  blackboxes.csv  crg.csv  eda_connectivity.csv  interrupts.csv  noc.csv  registers.csv
examples/irq_soc/: irq_top.sv
examples/tiny_soc/: axi_fabric.sv  llc_slice.sv  soc_top.sv
src/rtl_agent/: __init__.py  cli.py  contract_dashboard.py  contracts.py  dashboard.py  indexer.py  interrupts.py  llm.py  modeler.py  models.py  parser.py  reducer.py  reports.py  tables.py
src/rtl_agent/checks/: __init__.py  base.py  llm_rules.py  registry.py  rules.py
tests/: test_indexer.py
