[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-agent"
version = "0.1.0"
description = "OpenAI-compatible RTL analysis toolkit for Verilog/SystemVerilog SOC integration."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FE IC Codex" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
rtl-agent = "rtl_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
